# macbrain-recon

./: README.md  Snakefile  config.yml  package-lock.json  package.json  pyproject.toml
scripts/: conform_slices.sh  get_dzi.js
